# flymark

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  simple_scheme.txt
src/: choices.rs  main.rs
src/app/: assignments.rs  auth.rs  journals.rs  marking.rs  mod.rs
src/choice/: mod.rs
src/imark/: mod.rs
src/term/: mod.rs
src/tmux/: mod.rs
src/ui/: assignments.rs  auth.rs  journals.rs  marking.rs  mod.rs  term.rs
src/util/: mod.rs  task.rs  tmux.rs
