[package]
name = "flymark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
clap  = { version = "3.1.15", features = ["derive"] }
tmux_interface = "0.2.1"
anyhow = "1.0.57"
tempfile = "3.3.0"
rpassword = "6.0.1"
serde = "1.0.137"
tui = "0.18.0"
crossterm = { version = "0.23.2", features = ["event-stream"] }
futures = "0.3.21"
futures-timer = "3.0.2"
