[package]
name = "flymark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
clap  = { version = "3.1.15", features = ["derive"] }
tmux_interface = "0.2.1"
anyhow = "1.0.57"
tempfile = "3.3.0"
serde = { version = "1.0.137", features = ["derive"] }
tui = "0.18.0"
crossterm = { version = "0.22.1", features = ["event-stream"] }
futures = "0.3.21"
futures-timer = "3.0.2"
tui-input = "0.1.2"
reqwest = { version = "0.11.10", features = ["json"] }
memfile = "0.2.1"
parking_lot = "0.12.0"
chrono = "0.4.19"
async-trait = "0.1.53"
